--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -1,7 +1,7 @@
 include Makefile.inc
 
 KERNEL=kernel.bin
-SOURCES=$(wildcard *.c) $(wildcard exeptions/*.c) $(wildcard hardware/*.c) $(wildcard IDT/*.c) $(wildcard memoryManager/*.c)
+SOURCES=$(wildcard *.c) $(wildcard exeptions/*.c) $(wildcard hardware/*.c) $(wildcard IDT/*.c) $(wildcard memoryManager/*.c) $(wildcard processManager/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm) $(wildcard hardware/*.asm) $(wildcard IDT/*.asm) $(wildcard exeptions/*.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
@@ -14,6 +14,7 @@ all: $(KERNEL)
 
 $(KERNEL): $(LOADEROBJECT) $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM)
 	$(LD) $(LDFLAGS) -T kernel.ld -o $(KERNEL) $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
+	$(LD) $(LDFLAGS) -T kernel.ld --oformat=elf64-x86-64 -o kernel.elf $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(STATICLIBS)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
@@ -25,6 +26,6 @@ $(LOADEROBJECT):
 	$(ASM) $(ASMFLAGS) $(LOADERSRC) -o $(LOADEROBJECT)
 
 clean:
-	rm -rf asm/*.o *.o *.bin exeptions/*.o hardware/*.o IDT/*.o memoryManager/*.o
+	rm -rf asm/*.o *.o *.bin exeptions/*.o hardware/*.o IDT/*.o memoryManager/*.o *.elf
 
 .PHONY: all clean
