--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -7,8 +7,9 @@ all: $(MODULE)
 
 $(MODULE): $(SOURCES)
 	$(GCC) $(GCCFLAGS) -T sampleCodeModule.ld _loader.c $(SOURCES) -o ../$(MODULE)
+	$(GCC) $(GCCFLAGS) -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(SOURCES) -o ../0000-sampleCodeModule.elf
 
 clean:
-	rm -rf *.o
+	rm -rf *.o *.elf
 
 .PHONY: all clean print
