Authored-by: Francisco Dominguez <fdominguezm@users.noreply.github.com>
User Debugging

--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -1,17 +1,17 @@
 include ../Makefile.inc
 
 MODULE=0000-sampleCodeModule.bin
-SOURCES=$(wildcard *.c) $(wildcard shell/*.c)
+SOURCES=$(wildcard [^_]*.c) $(wildcard ./shell/*.c) 
 SOURCES_ASM=$(wildcard *.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
-STATICLIBS=
+ALL_OBJECTS= $(OBJECTS_ASM) $(OBJECTS)
 
 all: $(MODULE)
 
-$(MODULE): $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM)
-	$(LD) $(LDFLAGS) -T sampleCodeModule.ld _loader.c $(OBJECTS) $(OBJECTS_ASM) -o ../$(MODULE)
-	$(LD) $(LDFLAGS) -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(OBJECTS) $(OBJECTS_ASM) -o ../0000-sampleCodeModule.elf
+$(MODULE): $(SOURCES)  $(OBJECTS) $(OBJECTS_ASM)
+	$(LD) $(LDFLAGS) -T sampleCodeModule.ld -o ../$(MODULE) $(OBJECTS) $(OBJECTS_ASM)
+	$(LD) $(LDFLAGS) -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 -o ../0000-sampleCodeModule.elf $(OBJECTS) $(OBJECTS_ASM)
 
 %.o: %.c
 	$(GCC) $(GCCFLAGS) -I./include -c $< -o $@
@@ -19,8 +19,7 @@ $(MODULE): $(OBJECTS) $(STATICLIBS) $(OBJECTS_ASM)
 %.o : %.asm
 	$(ASM) $(ASMFLAGS) $< -o $@
 
-
 clean:
-	rm -rf *.o shell/*.o *.elf
+	rm -rf *.o shell/*.o
 
 .PHONY: all clean print
