--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 
 MODULE=0000-sampleCodeModule.bin
-SOURCES=$(wildcard [^_]*.c) $(wildcard ./shell/*.c) 
+SOURCES=$(wildcard [^_]*.c) $(wildcard ./shell/*.c) $(wildcard ./tests/*.c) 
 SOURCES_ASM=$(wildcard *.asm)
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
